Update documentation and add Vibe Coding branding
- Update README.md and README_CN.md with Vibe Coding badges and information
- Add LICENSE (MIT), CHANGELOG.md, and CONTRIBUTING.md
- Add GitHub templates (issue templates, PR template)
- Add GitHub Actions CI/CD workflow
- Clean up temporary documentation files
- Add GITHUB_SETUP.md with detailed publishing guide
- Improve .gitignore with more rules

Built with Vibe Coding - AI-assisted development

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ out/
 
 # macOS
 .DS_Store
+.AppleDouble
+.LSOverride
 
 # Gradle Wrapper
 !gradle/wrapper/gradle-wrapper.jar
@@ -32,4 +34,15 @@ out/
 *.zip
 *.tar.gz
 *.rar
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
