Fix workflow syntax error in release.yml
- Remove invalid if conditions with secrets comparison
- Use continue-on-error instead for better handling
- Simplify marketplace publishing step

The previous syntax 'if: secrets.SOMETHING' is not valid in GitHub Actions.
Using continue-on-error allows the job to proceed even if token is missing.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,16 +99,8 @@ jobs:
         asset_content_type: application/zip
         
     - name: Publish to JetBrains Marketplace
-      if: ${{ secrets.JETBRAINS_PUBLISH_TOKEN != '' }}
+      continue-on-error: true
       run: ./gradlew publishPlugin
       env:
         PUBLISH_TOKEN: ${{ secrets.JETBRAINS_PUBLISH_TOKEN }}
-        
-    - name: Notify if Marketplace Token Missing
-      if: ${{ secrets.JETBRAINS_PUBLISH_TOKEN == '' }}
-      run: |
-        echo "⚠️  JETBRAINS_PUBLISH_TOKEN not configured"
-        echo "Plugin built and released to GitHub, but not published to JetBrains Marketplace"
-        echo "To enable marketplace publishing, add JETBRAINS_PUBLISH_TOKEN to repository secrets"
-        echo "Get your token from: https://plugins.jetbrains.com/author/me/tokens"
 
