Rename plugin to 'Launch in Cursor' - v2.0.0
Major rebranding to differentiate from similar plugins:

✨ New Name: Launch in Cursor
🆔 New Plugin ID: dev.launchincursor.plugin
🚀 Key Advantage: Can directly launch projects in Cursor even if they've never been opened before

Changes:
- Updated plugin.xml with new name, ID, and enhanced description
- Renamed project in settings.gradle.kts
- Updated README.md and README_CN.md with new branding and advantages
- Updated CHANGELOG.md with v2.0.0 release notes
- Updated GitHub workflow release notes

This plugin stands out by directly launching Cursor with project path,
unlike other plugins that may fail with new projects.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,29 +38,35 @@ jobs:
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       with:
-        files: ./build/distributions/openincursor-plugin-${{ steps.get_version.outputs.VERSION }}.zip
+        files: ./build/distributions/launchincursor-plugin-${{ steps.get_version.outputs.VERSION }}.zip
         body: |
-          # Open in Cursor Plugin ${{ github.ref_name }}
+          # Launch in Cursor Plugin ${{ github.ref_name }}
           
           🎉 **Built with Vibe Coding** - AI-assisted development
           
+          ## 🚀 Why This Plugin?
+          
+          **Direct Launch Capability:** Unlike other similar plugins, this one can open projects in Cursor **even when Cursor hasn't previously opened that project**. It directly launches Cursor with your project path, making it truly hassle-free!
+          
           ## ✨ Features
+          - 🚀 Direct launch - works even for new projects never opened in Cursor
           - 🖱️ Custom Cursor brand icon in context menu
-          - 🚀 One-click project opening in Cursor editor
+          - ⚡ One-click project opening in Cursor editor
           - 🌍 Cross-platform support (macOS, Windows, Linux)
           - 🎨 Light/Dark theme support
+          - ⚙️ Zero configuration required
           
           ## 📦 Installation
           
           ### Method 1: From Release (Recommended)
-          1. Download `openincursor-plugin-${{ steps.get_version.outputs.VERSION }}.zip` below
+          1. Download `launchincursor-plugin-${{ steps.get_version.outputs.VERSION }}.zip` below
           2. Open IntelliJ IDEA or Android Studio
           3. Go to `Settings/Preferences` → `Plugins` → `⚙️` → `Install Plugin from Disk...`
           4. Select the downloaded zip file
           5. Restart IDE
           
-          ### Method 2: From JetBrains Marketplace (Coming Soon)
-          Search for "Open in Cursor" in the plugin marketplace
+          ### Method 2: From JetBrains Marketplace
+          Search for "Launch in Cursor" in the plugin marketplace
           
           ## 🔧 Setup
           
